fix: align contact separators

--- a/src/components/articles/ArticleInlineList.scss
+++ b/src/components/articles/ArticleInlineList.scss
@@ -14,19 +14,37 @@ li.article-inline-list-item {
     margin-right: calc($spacing-between-items - 10px);
     white-space: nowrap;
     display: inline-flex;
+    align-items: center;
+    vertical-align: middle;
+    line-height: 1;
 
     @include media-breakpoint-down(sm) {
         margin-right: calc($spacing-between-items - 12px);
+    }
+
+    a {
+        display: inline-flex;
+        align-items: center;
+        vertical-align: middle;
+        line-height: 1;
     }
 
     &:not(:last-child)::after {
         content: "•";
         color: var(--theme-muted);
         margin-left: $spacing-between-items;
-        margin-top: 4px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        vertical-align: middle;
+        line-height: 1;
+        width: 0.9em;
+        margin-top: 0;
+
         @include media-breakpoint-down(md) {
-            margin-top: 5px;
+            width: 0.85em;
         }
+
         @include media-breakpoint-down(sm) {
             margin-left: calc($spacing-between-items - 5px);
         }
